--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#551F8A</color>
     <color name="colorPrimaryDark">#44186E</color>
     <color name="colorBackground">#551F8A</color>
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorAccent">#551F8A</color>
     <color name="colorDivider">#d6d8db</color>
 
     <color name="black_overlay">#66000000</color>
