--- a/app/src/main/res/layout/item_view_row.xml
+++ b/app/src/main/res/layout/item_view_row.xml
@@ -3,17 +3,15 @@
     android:id="@+id/RelativeLayout01"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/black_overlay"
-    android:padding="20dp">
+    android:paddingTop="10dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:text="Next"
-        android:textSize="15dp"
-        android:paddingLeft="20dp"
-        android:textColor="@android:color/white"
+        android:textSize="18dp"
+        android:textColor="@android:color/black"
         android:id="@+id/itemName"/>
 
     <TextView
@@ -22,8 +20,8 @@
         android:layout_alignParentRight="true"
         android:paddingRight="20dp"
         android:text="50.99"
-        android:textSize="15dp"
-        android:textColor="@android:color/white"
+        android:textSize="18dp"
+        android:textColor="@android:color/black"
         android:id="@+id/itemPrice"/>
 
 </RelativeLayout>
